# TensorPotential

./: .gitignore  pyproject.toml  setup.py
